# XSmall-HMI-SCADA_input_output

./: .gitignore  CMakeList.txt  CMakeLists.txt  LICENSE  README.md
config/: config1.xml  test_config.xml
src/: app.cpp  app.hpp  gui_widgets.cpp  main.cpp  scada_app.cpp  scada_app.hpp  widget.hpp
tests/: CMakeLists.txt  test.cpp
